mongo配置說明，構造函數private --> public

--- a/src/main/resources/env-development.properties
+++ b/src/main/resources/env-development.properties
@@ -2,10 +2,10 @@
 
 ## MongoDB config
 mongodb.name=restfiddle
-mongodb.host=localhost
+mongodb.host=127.0.0.1
 mongodb.port=27017
-mongodb.username=rf
-mongodb.password=rf
+mongodb.username=root
+mongodb.password=root
 
 ## Email Config
 mail.protocol=smtp
@@ -28,4 +28,4 @@ sendgrid.password=example
 #server.port=8080
 
 #host url used for generate api
-application.host-uri=http://localhost:8080
+application.host-uri=http://127.0.0.1:8080
