响应body，设置httpResponse的entity的编码 JSP编码 工程结构

--- a/src/main/resources/env-development.properties
+++ b/src/main/resources/env-development.properties
@@ -4,8 +4,8 @@
 mongodb.name=restfiddle
 mongodb.host=127.0.0.1
 mongodb.port=27017
-mongodb.username=root
-mongodb.password=root
+mongodb.username=jason
+mongodb.password=123456
 
 ## Email Config
 mail.protocol=smtp
@@ -24,8 +24,8 @@ mail.smtps.ssl.checkserveridentity=true
 ## SendGrid Config
 sendgrid.username=example
 sendgrid.password=example
-
-#server.port=8080
+## 服务端口号
+server.port=5678
 
 #host url used for generate api
-application.host-uri=http://127.0.0.1:8080
+application.host-uri=http://127.0.0.1:${server.port}
