--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.restfiddle</groupId>
 	<artifactId>restfiddle</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -17,6 +17,12 @@
 		<spring-data-releasetrain.version>Fowler-SR2</spring-data-releasetrain.version>
 	</properties>
 	<dependencies>
+		<!--<dependency>-->
+			<!--<groupId>javax.el</groupId>-->
+			<!--<artifactId>javax.el-api</artifactId>-->
+			<!--<version>2.2.4</version>-->
+		<!--</dependency>-->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -180,12 +186,21 @@
 	<build>
 		<finalName>restfiddle</finalName>
 		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<!-- <plugin> <artifactId>maven-war-plugin</artifactId> <configuration> 
-				<packagingExcludes>WEB-INF/lib/*.jar</packagingExcludes> </configuration> 
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.5.2.RELEASE</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+			<!-- <plugin> <artifactId>maven-war-plugin</artifactId> <configuration>
+				<packagingExcludes>WEB-INF/lib/*.jar</packagingExcludes> </configuration>
 				</plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
